--- a/WebCademy/CreateSite/Урок1/css/main.css
+++ b/WebCademy/CreateSite/Урок1/css/main.css
@@ -1,12 +1,34 @@
-html {
+html,
+body {
   font-family: "PT Sans Caption", sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
-/* 
-font-family: 'Merriweather', serif;
-font-family: 'PT Sans Caption', sans-serif;
-*/
+/* img {
+  display: inline-block;
+} */
+
+/* GRID */
+.container {
+  width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+.col-4 {
+  width: 360px;
+  margin-right: 30px;
+  float: left;
+}
+.col-4:last-child {
+  margin-right: 0px;
+}
+
 /* Стили header */
 .header {
   background-color: #183246;
@@ -49,4 +71,47 @@ font-family: 'PT Sans Caption', sans-serif;
   position: absolute;
   bottom: 50px;
   left: 50%;
+}
+
+/* Стили Portfolio */
+.portflio {
+  padding-top: 70px;
+  padding-bottom: 100px;
+}
+
+.title {
+  font-size: 46px;
+  margin-bottom: 60px;
+  font-family: "Merriweather", serif;
+  text-align: center;
+}
+
+.portfolio-item {
+  margin-bottom: 20px;
+}
+
+.portfolio-item_image {
+  margin-bottom: 17px;
+}
+
+.portfolio-item_title {
+  font-size: 24px;
+  line-height: normal;
+  margin-bottom: 5px;
+}
+.portfolio-item_title a {
+  text-decoration: none;
+  color: #000;
+  border-bottom: 1px solid #fff;
+}
+
+.portfolio-item_title a:hover {
+  text-decoration: none;
+  color: #2162c7;
+  border-bottom: 1px solid rgba(33, 98, 199, 0.3);
+}
+
+.portfolio-item_text p {
+  margin-top: 0;
+  margin-bottom: 15px;
 }
