--- a/WebCademy/CreateSite/css/main.css
+++ b/WebCademy/CreateSite/css/main.css
@@ -115,3 +115,68 @@ body {
   margin-top: 0;
   margin-bottom: 15px;
 }
+
+/* FOOTER */
+
+.footer {
+  background-color: #061634;
+  color: #6479a2;
+  padding-top: 90px;
+  padding-bottom: 190px;
+}
+.footer p {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+p.footer__name {
+  font-size: 28px;
+  line-height: normal;
+  font-family: "Merriweather", serif;
+  margin-bottom: 10px;
+}
+
+p.footer__social {
+  color: #fff;
+}
+
+p.footer__icons {
+  color: #fff;
+  font-size: 32px;
+}
+p.footer__icons a {
+  color: #fff;
+  text-decoration: none;
+  margin-right: 30px;
+}
+
+p.footer__icons a:last-child {
+  margin-right: 0px;
+}
+
+p.footer__icons a:hover {
+  color: #ffe400;
+}
+
+.button {
+  font-weight: 700;
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1.6px;
+
+  display: inline-block;
+
+  border: 2px solid #fff;
+  border-radius: 50px;
+
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 23px;
+  padding-right: 23px;
+  margin-bottom: 13px;
+}
+
+.button:hover {
+  color: #061634;
+  background-color: #fff;
+}
