--- a/WebCademy/CreateSite/css/main.css
+++ b/WebCademy/CreateSite/css/main.css
@@ -3,12 +3,17 @@ body {
   font-family: "PT Sans Caption", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  min-width: 280px;
 }
 img {
   display: inline-block;
 }
 a {
   transition: 0.2s ease-out;
+}
+
+* {
+  box-sizing: border-box;
 }
 /* GRID */
 .container {
@@ -40,6 +45,8 @@ a {
   background-size: cover;
 
   height: 100vh;
+  min-height: 400px;
+
   color: white;
   text-align: center;
 
@@ -206,6 +213,11 @@ a {
   margin-bottom: 17px;
 }
 
+.portfolio-item_image img {
+  max-width: 100%;
+  height: auto;
+}
+
 .portfolio-item_title {
   font-size: 24px;
   line-height: normal;
@@ -267,7 +279,7 @@ p.footer__icons a:last-child {
 }
 
 p.footer__icons a:hover {
-  color: #ffe400;
+  color: #6479a2;
 }
 
 .button {
@@ -295,3 +307,45 @@ p.footer__icons a:hover {
   background-color: #fff;
 }
 /* \\ FOOTER // */
+
+/*  / / MEDIA \ \ */
+
+@media (max-width: 1160px) {
+  .container {
+    width: 100%;
+  }
+  .col-4 {
+    width: 100%; /*реальная ширина = width + border + padding-left +padding-right ;*/
+    margin: 0;
+    margin-bottom: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+  }
+  .header {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .header__title {
+    font-size: 38px;
+    line-height: 48px;
+    margin-bottom: 15px;
+  }
+  .header__slogan {
+    font-size: 22px;
+    line-height: 38px;
+  }
+  .portflio {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .title {
+    font-size: 36px;
+  }
+  .footer {
+    padding-top: 70px;
+    padding-bottom: 60px;
+  }
+}
+
+/* \\MEDIA// */
