--- a/WebCademy/CreateSite/css/main.css
+++ b/WebCademy/CreateSite/css/main.css
@@ -196,6 +196,29 @@ a {
   color: #fff;
   background-color: #071635;
 }
+.btn-bck-kofe {
+  font-weight: 700;
+  text-decoration: none;
+  color: #492d03;
+  text-transform: uppercase;
+  letter-spacing: 1.6px;
+
+  display: inline-block;
+
+  border: 2px solid #492d03;
+  border-radius: 50px;
+
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 23px;
+  padding-right: 23px;
+  margin-bottom: 13px;
+  transition: 0.2s ease-out;
+}
+.btn-bck-kofe:hover {
+  color: #fff;
+  background-color: #492d03;
+}
 /* \\ кнопки Вернуться назад // */
 /* \\ PORTFOLIO-SINGLE-PAGE // */
 /* / / PORTFOLIO \ \ */
@@ -207,9 +230,18 @@ a {
 
 .title {
   font-size: 46px;
-  margin-bottom: 60px;
+  margin-bottom: 30px;
   font-family: "Merriweather", serif;
   text-align: center;
+  font-weight: 600;
+}
+
+.sub_title {
+  font-size: 36px;
+  margin-bottom: 30px;
+  font-family: "Merriweather", serif;
+  text-align: center;
+  font-weight: 500;
 }
 
 .portfolio-item {
