--- a/TypeVerstal/Burgery/site/style/main.css
+++ b/TypeVerstal/Burgery/site/style/main.css
@@ -36,13 +36,14 @@ h1 span {
   line-height: 38px;
   display: block;
 }
-p {
+.text p {
   font-family: "Lato", sans-serif;
   font-size: 19px;
   line-height: 1.4;
   margin-bottom: 42px;
 }
-a {
+.main a,
+.promo a {
   color: #1e2f40;
   background-color: #fbb731;
   border-radius: 5px;
@@ -69,8 +70,117 @@ a {
     #fdc830 100.79%
   );
 }
-img {
+.main img {
   width: 829px;
   position: absolute;
   right: -168px;
+}
+.promo {
+  padding-top: 185px;
+  padding-bottom: 185px;
+}
+.promo-left,
+.promo-right {
+  flex: 0 0 49%;
+  color: white;
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.promo-left {
+  background-image: url(../image/promo-left.png);
+  padding: 116px 50px;
+}
+.promo-right {
+  background-image: url(../image/promo-right.png);
+  padding: 102px 50px;
+}
+.sale {
+  font-size: 14px;
+  font-weight: 900;
+  background: #f37335;
+  padding: 5px 19px;
+  border-radius: 14px;
+  display: inline-block;
+  text-transform: uppercase;
+  margin-bottom: 3px;
+}
+.cost {
+  font-size: 60px;
+  font-weight: 900;
+  margin-bottom: 8px;
+}
+.description {
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
+  line-height: 24px;
+  color: #faf9f9;
+}
+.promo-left .description {
+  max-width: 392px;
+}
+.promo-right .description {
+  max-width: 300px;
+  margin-bottom: 20px;
+}
+.free {
+  font-size: 44px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.footer {
+  background: #1e2f40;
+  color: white;
+  padding-top: 117px;
+  padding-bottom: 106px;
+}
+.logo {
+  height: 56px;
+  widht: 63px;
+}
+.item {
+  flex: 0 0 auto;
+}
+.item h2 {
+  font-size: 20px;
+  font-weight: 800;
+  text-transform: uppercase;
+  margin-bottom: 12px;
+}
+.item ul,
+.tel ul {
+  list-style-type: none;
+}
+.item li {
+  margin-bottom: 9px;
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  color: #faf9f9;
+  line-height: 24px;
+}
+.item a {
+  color: #dedede;
+  text-decoration: none;
+  font-weight: 400;
+}
+.item span {
+  color: #dedede;
+  font-weight: 400;
+  margin-bottom: 2px;
+  display: block;
+}
+.tel ul {
+  font-size: 20px;
+  font-weight: 700;
+}
+.tel li {
+  margin-bottom: 12px;
+}
+.tel a {
+  text-decoration: none;
+  color: #fbb731;
 }
